Updated syllabus so lightning chats are explained in one place.

--- a/syllabus/bayesian_modeling_workshop.tex
+++ b/syllabus/bayesian_modeling_workshop.tex
@@ -53,32 +53,12 @@ A portion of the workshop will be interactive,  including:
 \item Interactive exercises:
 	\begin{itemize}
 	\item Google Collab exercises using iPython notebook
+	\item Pausing slides to work out derivations or connections between pictures. 
 	\item Constructing and/or working with Python (rather than R) implementations of \cite{hoff2009first} and \cite{gelman2013bayesian}.
 	\end{itemize}
-\item Student ``lightning chat" (5 minute) presentations.  To allow for student-centered direction and autonomy,  students may choose any of the following:
-	\begin{itemize}
-	\item Selecting an idea from the "Lightning Chat ideas" section of the Appendix. 
-	\item Presentation of Python implementations of models from \cite{hoff2009first} ,  \cite{ gelman2013bayesian},  or the workshop.
-	\item Presentation of an exercise, e.g. from \cite{gelman2013bayesian} or \cite{hoff2009first}.
-	\item Presentation of a reading section,  blog,  etc.  of interest.
-	\item Presentation of a mathematical derivation of something relevant to the course.
-	\item Presentation of how a concept relates to something from their research area.
-	%\item A list of questions that we can discuss.
-	\end{itemize}
+\item Student ``lightning chat" (5 minute) presentations.   To allow for student-centered direction and autonomy,  students may choose the topic, although we do provide a bunch of ideas.  See the "Lightning Chat" section of the syllabus.	
 \item (Maybe) Mini reading group discussions  -- We likely won't have time to read a whole paper,  but we could discuss sections of a text at the very beginning, or perhaps sections of a relevant paper.
 \end{itemize}
-
-
-
-
-
-
-
-
-9:07
-Tomorrow:
-your MCMC stuff (very much ok to take whole day if desired/needed)
-(if time) mvn, the second part (conditional conjugacy, inference, missing data)
 
 \section{Topics}
 
@@ -219,16 +199,25 @@ A tentative sketch of the schedule.
 \end{itemize}
 
 
-\bibliography{references_bayesian_modeling_workshop}{}
-\bibliographystyle{unsrt}
+\section{Lightning chats}
 
+To allow for student-centered direction and autonomy, we provide an opportunity for a few short "lightning chats" each day of the workshop.   Lightning chats should take about 5 minutes, and should be associated with some "artifact" (e.g., a couple of slides).
 
+	
+Below are some leads, but you may choose the topic.
 
-\appendix
+\subsection{General}
+\begin{itemize}
+\item Presentation of a reading section,  blog,  etc.  of interest.
+\item Presentation of a mathematical derivation of something relevant to the course.
+\item Presentation of how a concept relates to something from your research area.
+\item Present one of the tutorial examples from \texttt{pymc3}.
+\item Review a demo with us from \url{https://github.com/avehtari/BDA_py_demos}
+\item Presentation of Python implementations of models from \cite{hoff2009first} ,  \cite{ gelman2013bayesian},  or the workshop.
+\item Presentation of an exercise, e.g. from \cite{hoff2009first} or \cite{gelman2013bayesian}.
+\end{itemize}
 
-\section{Student lightning chat ideas}
-
-\subsection{Intro} 
+\subsection{Intro to Bayes} 
 \begin{itemize}
 \item Present \textit{Why most published research findings are false} \cite{ioannidis2005most}.
 \item Present Bayesian analysis of multiple sudden infant deaths  \cite{hill2004multiple}.
@@ -245,11 +234,18 @@ A tentative sketch of the schedule.
 
 \subsection{Miscellaneous} 
 \begin{itemize}
-\item Present one of the tutorial examples from \texttt{pymc3}.
-\item Review a demo with us from \url{https://github.com/avehtari/BDA_py_demos}.
 \item Present a section of Gelman et al.'s Bayesian workflow paper \cite{gelman2020bayesian}. 
 \item Present a clip from the Chapter on Model Checking in Gelman et al.'s text \cite{gelman2013bayesian}.
 \end{itemize}
+
+
+
+\bibliography{references_bayesian_modeling_workshop}{}
+\bibliographystyle{unsrt}
+
+
+
+\appendix
 
 \section{Student mini projects}
 
