--- a/syllabus/bayesian_modeling_workshop.tex
+++ b/syllabus/bayesian_modeling_workshop.tex
@@ -19,7 +19,7 @@
 
 \section{Overview}
 
-\subsection{Goal}  The goal of this workshop is to introduce students to the concepts and practice of Bayesian modeling.   We will begin by motivating Bayesian approaches.  Next,  we will introduce and apply models with conjugate priors,  such as Bayesian normal,  Bayesian binomial,  and Bayesian linear regression.   We will then introduce the two primary techniques for approximate Bayesian inference,  namely Markov Chain Monte Carlo (MCMC) and variational inference.    Using these techniques,  and in some cases clever trickery,  we will then tackle models for which there are not conjugate priors,  such as Bayesian logistic regression,  Bayesian multiclass regression,  Bayesian mixture models,  and Bayesian hidden Markov models.  Finally,  we will very briefly discuss Bayesian deep learning.    For applications,  we will use Python; namely,  a combination of  pymc3,  scikit-learn,  and code we write ourselves.  
+\subsection{Goal}  The goal of this workshop is to introduce students to the concepts and practice of Bayesian modeling.   We will begin by motivating Bayesian approaches.  Next,  we will introduce and apply models with conjugate priors,  illustrating with the Bayesian binomial and Bayesian normal.   We will then introduce the two primary techniques for approximate Bayesian inference,  namely Markov Chain Monte Carlo (MCMC) and variational inference (VI).  Using these techniques, we will handle semi-conjugate models, including Bayesian linear regression, Bayesian mixture models,  and Bayesian hidden Markov models.   Finally, using more advanced VI and MCMC,  and in some cases clever trickery,  we will then tackle models for which there are not conjugate priors,  such as Bayesian logistic regression, Bayesian multiclass regression, and a racially polarized voting model.   Finally,  we will very briefly discuss Bayesian deep learning.    For applications,  we will use Python; namely,  a combination of  pymc3,  scikit-learn,  and code we write ourselves.  
  
 \subsection{Date and Time}  The workshop will be held via Zoom,  June 7-11,  from 2pm-5pm EST.   
  
@@ -33,7 +33,7 @@ A textbook is not needed for this workshop.  However,  three excellent resources
 
 \begin{enumerate}
 \item Peter Hoff's textbook \cite{hoff2009first}
-\item Christopher Bishop's textbook \cite{bishop2006pattern}
+\item Christopher Bishop's textbook \cite{bishop2006pattern}, available online at \url{https://www.microsoft.com/en-us/research/uploads/prod/2006/01/Bishop-Pattern-Recognition-and-Machine-Learning-2006.pdf}.
 \item Andrew Gelman et al.'s textbook \cite{gelman2013bayesian},  available online at \url{http://www.stat.columbia.edu/~gelman/book/}. 
 \end{enumerate}
 
@@ -168,9 +168,9 @@ A tentative sketch of the schedule.
 
 \textbf{Monday}
 \begin{itemize}
+\item Course overview 
 \item Why bayes?
 \item Introduction to inference (plus activity)
-\item Multivariate normal, part I (motivation, fully conjugate models, cybersecurity application)
 \end{itemize}
 
 \textbf{Tuesday}
@@ -181,7 +181,8 @@ A tentative sketch of the schedule.
 
 \textbf{Wednesday}
 \begin{itemize}
-\item Multivariate normal, part II (conditionally conjugate model, Gibbs sampler, activity, missing data)
+\item Multivariate normal, part I (motivation, cybersecurity application, Gibbs sampler, activity)
+\item Multivariate normal, part II (handling missing data)
 \item Bayesian linear regression, Part I
 \end{itemize}
 
@@ -193,8 +194,8 @@ A tentative sketch of the schedule.
 
 \textbf{Friday}
 \begin{itemize}
-\item Introduction to variational inference
-\item pymc3 activity 
+\item Introduction to variational inference (with pymc3 activity)
+\item Bayesian logistic and categorical regression
 \item Bayesian deep learning
 \end{itemize}
 
