Update index.md to match syllabus' updated overview

--- a/syllabus/bayesian_modeling_workshop.tex
+++ b/syllabus/bayesian_modeling_workshop.tex
@@ -19,7 +19,7 @@
 
 \section{Overview}
 
-\subsection{Goal}  The goal of this workshop is to introduce students to the concepts and practice of Bayesian modeling.   We will begin by motivating Bayesian approaches.  Next,  we will introduce and apply models with conjugate priors,  illustrating with the Bayesian binomial and Bayesian normal.   We will then introduce the two primary techniques for approximate Bayesian inference,  namely Markov Chain Monte Carlo (MCMC) and variational inference (VI).  Using these techniques, we will handle semi-conjugate models, including Bayesian linear regression, Bayesian mixture models,  and Bayesian hidden Markov models.   Finally, using more advanced VI and MCMC,  and in some cases clever trickery,  we will then tackle models for which there are not conjugate priors,  such as Bayesian logistic regression, Bayesian multiclass regression, and a racially polarized voting model.   Finally,  we will very briefly discuss Bayesian deep learning.    For applications,  we will use Python; namely,  a combination of  pymc3,  scikit-learn,  and code we write ourselves.  
+\subsection{Goal}  The goal of this workshop is to introduce students to the concepts and practice of Bayesian modeling.   We will begin by motivating Bayesian approaches.  Next,  we will introduce and apply models with conjugate priors,  illustrating with the Bayesian binomial and Bayesian normal.   We will then introduce the two primary techniques for approximate Bayesian inference,  namely Markov Chain Monte Carlo (MCMC) and variational inference (VI).  Using these techniques, we will handle semi-conjugate models, including Bayesian linear regression, Bayesian mixture model,  and Bayesian hidden Markov model.   Finally, using more advanced VI and MCMC,  and in some cases clever trickery,  we will then tackle models for which there are not conjugate priors,  such as Bayesian logistic regression, Bayesian multiclass regression, and a racially polarized voting model.   Finally,  we will very briefly discuss Bayesian deep learning.    For applications,  we will use Python; namely,  a combination of  pymc3,  scikit-learn,  and code we write ourselves.  
  
 \subsection{Date and Time}  The workshop will be held via Zoom,  June 7-11,  from 2pm-5pm EST.   
  
