--- a/syllabus/bayesian_modeling_workshop.tex
+++ b/syllabus/bayesian_modeling_workshop.tex
@@ -119,8 +119,8 @@ Here, again, we use MCMC and VI, but we need to employ more advanced (or at leas
 
 \begin{itemize}
 	\item \textbf{Gradient-based sampling} - A brief introduction to Hamiltonian Monte Carlo (HMC) and No U-Turn Sampler (NUTS).  Introduction to the python package \texttt{pymc3}.
+	\item \textbf{Variational inference for non-conjugate models} - A very brief introduction to automatic differentiation VI.  Other common strategies include Laplace method VI and Delta method VI.
 	\item \textbf{Model augmentation} - An auxilliary variable may be introduced to transform a non-conjugate model into one that is conjugate or semi-conjugate.
-	\item \textbf{Variational inference for non-conjugate models} - We will probably need to skip this in the interest of time.  Common strategies are Laplace method VI,  Delta method VI, and automatic differentiation VI.
 \end{itemize}
 \subsubsection{Models}
 
@@ -170,26 +170,26 @@ A tentative sketch of the schedule.
 \begin{itemize}
 \item Course overview 
 \item Why bayes?
-\item Introduction to inference (plus activity)
+\item Introduction to Inference: Conjugate Models, part I (plus activity)
 \end{itemize}
 
 \textbf{Tuesday}
 
 \begin{itemize}
-\item Introduction to sampling (with activity) 
+\item Introduction to inference: Conjugate Models, part II
+\item Sampling, part I (Metropolis, Metropolis-Hastings, introduction to MCMC; with activity) 
 \end{itemize}
 
 \textbf{Wednesday}
 \begin{itemize}
-\item Multivariate normal, part I (motivation, cybersecurity application, Gibbs sampler, activity)
-\item Multivariate normal, part II (handling missing data)
-\item Bayesian linear regression, Part I
+\item Sampling, part II (Gibbs sampling, gradient based sampling; with activity) 
+\item Multivariate normal, part I (motivation, cybersecurity application, Gibbs sampler)
 \end{itemize}
 
 \textbf{Thursday}
 \begin{itemize}
-\item 	Bayesian linear regression, Part II (activity,  hierarchical bayesian linear regression)
-\item Gradient based sampling 
+\item Multivariate normal, part II (activity; handling missing data)
+\item Bayesian linear regression (plus activity)
 \end{itemize}
 
 \textbf{Friday}
