--- a/slides/conjugacy/conjugacy.tex
+++ b/slides/conjugacy/conjugacy.tex
@@ -162,11 +162,11 @@ The Gamma distribution is a conjugate prior for the Poisson likelihood.  Can you
 Given observations $\+x = (x_1, ..., x_n)$, we have
 
 \begin{align*}
-p(\lambda) & \propto \lambda^{\labeledbluebox{}{$\alpha$}-1} \exp \big\{-\labeledgreenbox{}{$\beta$} \lambda \big\}  \\
-p(\+x \cond \lambda) & \stackrel{iid}{=} \ds\prod_{i=1}^n p(x_i \cond \lambda) \\ & \stackrel{(Poisson)}\propto \lambda^{\labeledbluebox{}{$\sum_{i=1}^n x_i$}} \exp \big\{-\labeledgreenbox{}{$n$} \lambda \big\}
+p(\lambda) & \propto \lambda^{\bluebox{$\alpha$}-1} \exp \big\{-\greenbox{$\beta$} \lambda \big\}  \\
+p(\+x \cond \lambda) & \stackrel{iid}{=} \ds\prod_{i=1}^n p(x_i \cond \lambda) \\ & \stackrel{(Poisson)}\propto \lambda^{\bluebox{$\sum_{i=1}^n x_i$}} \exp \big\{-\greenbox{$n$} \lambda \big\}
 \intertext{so}
 p(\lambda \cond \+x) & \propto p(\+x \cond \lambda) p(\lambda) \\
-&=  \lambda^{\labeledbluebox{}{($\alpha + \sum_i x_i$)}-1} \exp \big\{ -\labeledgreenbox{}{($\beta +n$)}\lambda \big\} 
+&=  \lambda^{\bluebox{($\alpha + \sum_i x_i$)}-1} \exp \big\{ -\greenbox{($\beta +n$)}\lambda \big\} 
 \end{align*}
 
 \end{frame}
