Changed VI slides to use new syntax from beamer template for making colored boxes.

--- a/slides/vi/bm_vi.tex
+++ b/slides/vi/bm_vi.tex
@@ -2119,7 +2119,7 @@ We use \textit{change of variables} to express the joint density in the new spac
 	
 So in the new space, the ELBO becomes 
 \[ \mathcal{L}(\+\lambda) = \E_{q(\+\zeta; \+\lambda)}  \bigg[ 
-	\bluebox{t2}{
+	\bluebox{
 	$\log p \big(\+x, T^{-1}(\+\zeta)\big) + \logabsdet{J_{T^{-1}} (\+\zeta)}$
 	} 
 \bigg]  + \mathbb{H} [q(\+\zeta ; \+\lambda )] \] 
