* Started hierarchical linear regression deck. * All sorts of random updates throughout the repo that I hadn't committed yet.

--- a/slides/regression/bayes_regression.tex
+++ b/slides/regression/bayes_regression.tex
@@ -17,8 +17,12 @@
 
 \maketitle
 
-\section{Why Bayesian Linear Regression?}
+\begin{frame}{Table of contents}
+  \setbeamertemplate{section in toc}[sections numbered]
+  \tableofcontents[hideallsubsections]
+\end{frame}
 
+\section{Why Bayesian Linear Regression?}
 \begin{frame}{Why Bayes? (Linear Regression Version)}
 \begin{itemize}
 \item Provides a \textit{distribution} over regression lines
@@ -374,7 +378,6 @@ This prior specifies $k$ in terms of the error variance, $k=g \sigma^2$ for some
 \end{sblock}
 
 \end{frame}
-
 
 
 \end{document}
