--- a/slides/mvn/bayesian_multivariate_normal/bm_multivariate_normal.tex
+++ b/slides/mvn/bayesian_multivariate_normal/bm_multivariate_normal.tex
@@ -43,13 +43,13 @@
 \begin{itemize}
 \item Prior information often exists and can be taken into account.
 	\begin{itemize}
-	\item Population-level info: see the typing example, PIMA Indians example
-	\item Nature (e.g. support) of data: see the reading comprehension example 
+	\item Population-level info {\tiny (Previous example: disease prevalence.  Forthcoming example: biometrics and PIMA Indians)}
+	\item Nature (e.g. support) of data {\tiny (Forthcoming example: reading comprehension)}
 	\end{itemize} \pause 	
-\item ML estimates of covariance matrices have large variance.
+\item ML estimates of covariance matrices can have large variance.
 	\begin{itemize}  
-	\item Problem can be especially bad in certain contexts (e.g., small data, high-dimensions, missing data)
-	\item Spherical prior provides regularization	\item Posterior asymptotically concentrates around maximum likelihood (ML) solution
+	\item Problem can be especially bad in certain contexts {\tiny ( e.g., small data, high-dimensions, missing data)}
+	\item Spherical prior provides regularization	\item Posterior still asymptotically concentrates around maximum likelihood (ML) solution
 	\end{itemize} \pause 
 \item Inference is no harder than for frequentist models
 	\begin{itemize}
