--- a/syllabus/bayesian_modeling_workshop.tex
+++ b/syllabus/bayesian_modeling_workshop.tex
@@ -170,26 +170,27 @@ A tentative sketch of the schedule.
 \begin{itemize}
 \item Course overview 
 \item Why bayes?
-\item Introduction to Inference: Conjugate Models, part I (plus activity)
+\item Conjugate Models, part I (plus activity)
 \end{itemize}
 
 \textbf{Tuesday}
 
 \begin{itemize}
-\item Introduction to inference: Conjugate Models, part II
+\item Conjugate Models, part II
 \item Sampling, part I (Metropolis, Metropolis-Hastings, introduction to MCMC; with activity) 
 \end{itemize}
 
 \textbf{Wednesday}
 \begin{itemize}
-\item Sampling, part II (Gibbs sampling, gradient based sampling; with activity) 
-\item Multivariate normal, part I (motivation, cybersecurity application, Gibbs sampler)
+\item Sampling, part II (Gibbs sampling, HMC, NUTS; with activity) 
+\item Multivariate normal, part I (motivation, cybersecurity application, Gibbs sampler, activity)
 \end{itemize}
 
 \textbf{Thursday}
 \begin{itemize}
-\item Multivariate normal, part II (activity; handling missing data)
+\item Multivariate normal, part II (handling missing data)
 \item Bayesian linear regression (plus activity)
+\item Hierarchical Bayesian linear regression
 \end{itemize}
 
 \textbf{Friday}
